fix spacing for username in top navbar and side navbar, add right side to top navbar

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,8 +1,11 @@
 .wrapper {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: $default-page-margin;
 }
 
 .formHolder {
@@ -14,9 +17,7 @@
     width: 100%;
     margin-bottom: 1rem;
   }
-  input {
-    min-width: 226.99px;
-  }
+  min-width: 226.99px;
 }
 
 .buttonHolder {
@@ -28,4 +29,17 @@
 
 .logo {
   margin-top: 1rem;
+  max-width: 440px;
+}
+
+@media screen and (max-width: $breakpoint-lg) {
+  .logo {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: $breakpoint-md) {
+  .logo {
+    min-width: 340px;
+  }
 }
